# cmake_examples

./: README.md
01_configure/: CMakeLists.txt  config.h.in  main.cpp  version.cpp  version.h
02_add_library/: CMakeLists.txt
02_add_library/lib/: CMakeLists.txt  lib.cpp  lib.h
02_add_library/src/: CMakeLists.txt  main.cpp
03_option/: CMakeLists.txt  main.cpp
